After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703673 - webvttenc: Cues should be seperated by two line breaks
webvttenc: Cues should be seperated by two line breaks
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.0.7
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-05 17:23 UTC by Brendan Long
Modified: 2013-07-05 23:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Append two line breaks after each cue instead of just one (800 bytes, patch)
2013-07-05 17:23 UTC, Brendan Long
committed Details | Review

Description Brendan Long 2013-07-05 17:23:59 UTC
Created attachment 248471 [details] [review]
Append two line breaks after each cue instead of just one

From the spec[1]:

> A WebVTT file body consists of the following components, in the following order:
>
>  * [...]  
>  * Zero or more WebVTT cues and WebVTT comments separated from each other by two or more WebVTT line terminators.

[1]: http://dev.w3.org/html5/webvtt/#syntax

You can see that we currently generate invalid WebVTT files by running this:

    gst-launch-1.0 souphttpsrc location=http://durian.blender.org/wp-content/content/subtitles/sintel_en.srt ! subparse ! webvttenc ! filesink location=test.vtt
Comment 1 Tim-Philipp Müller 2013-07-05 23:50:32 UTC
Thanks for the patch!


commit f53e66f4c6d7735123a4eb03fe4824ce1ffee01c
Author: Brendan Long <b.long@cablelabs.com>
Date:   Fri Jul 5 11:20:49 2013 -0600

    webvttenc: Separate cues with two line breaks instead of one.
    
    See http://dev.w3.org/html5/webvtt/#syntax
    
    https://bugzilla.gnome.org/show_bug.cgi?id=703673