webvttenc: Separate cues with two line breaks instead of one.

See http://dev.w3.org/html5/webvtt/#syntax

https://bugzilla.gnome.org/show_bug.cgi?id=703673